--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,14 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://passerdeliciae.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
+logo: /assets/img/logo.gif
 
 # Build settings
-theme: minima
+#theme: minima
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude from processing.
 # The following items will not be processed, by default.
